[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/kenney_monster-builder-pack/PNG/Default/body_blueA.png" type="Texture" id=1]
[ext_resource path="res://assets/kenney_monster-builder-pack/PNG/Default/leg_blueA.png" type="Texture" id=2]
[ext_resource path="res://assets/kenney_monster-builder-pack/PNG/Default/arm_blueA.png" type="Texture" id=3]
[ext_resource path="res://assets/kenney_monster-builder-pack/PNG/Default/eye_angry_blue.png" type="Texture" id=4]
[ext_resource path="res://assets/kenney_monster-builder-pack/PNG/Default/mouthA.png" type="Texture" id=5]
[ext_resource path="res://assets/kenney_monster-builder-pack/PNG/Default/nose_brown.png" type="Texture" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/ArmR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 104, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/ArmL:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -48, -100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/LegR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, -65 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/LegL:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, -65 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/Body:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28, -178 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/EyeL:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -11, -216 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/EyeR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 66, -216 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprites/Nose:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28, -167 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprites/Mouth:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28, -124 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/LegR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 64, -65 ), Vector2( 64, -65 ), Vector2( 64, -65 ), Vector2( 64, -85 ), Vector2( 64, -65 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/LegL:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -65 ), Vector2( -8, -85 ), Vector2( -8, -65 ), Vector2( -8, -65 ), Vector2( -8, -65 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/ArmR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 104, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/ArmL:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -48, -100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/LegR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 60, -65 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/LegL:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -65 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/Body:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28, -178 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/EyeL:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -11, -216 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/EyeR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 66, -216 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprites/Nose:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28, -167 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprites/Mouth:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28, -124 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 72.5, 14.1667 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 7 )

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( -28, 148 )
scale = Vector2( 1, 0.996492 )

[node name="ArmR" type="Sprite" parent="Sprites"]
position = Vector2( 104, -100 )
texture = ExtResource( 3 )

[node name="ArmL" type="Sprite" parent="Sprites"]
position = Vector2( -48, -100 )
texture = ExtResource( 3 )
flip_h = true

[node name="LegR" type="Sprite" parent="Sprites"]
position = Vector2( 60, -65 )
texture = ExtResource( 2 )

[node name="LegL" type="Sprite" parent="Sprites"]
position = Vector2( -4, -65 )
texture = ExtResource( 2 )
flip_h = true

[node name="Body" type="Sprite" parent="Sprites"]
position = Vector2( 28, -178 )
texture = ExtResource( 1 )

[node name="EyeL" type="Sprite" parent="Sprites"]
position = Vector2( -11, -216 )
texture = ExtResource( 4 )

[node name="EyeR" type="Sprite" parent="Sprites"]
position = Vector2( 66, -216 )
texture = ExtResource( 4 )
flip_h = true

[node name="Nose" type="Sprite" parent="Sprites"]
position = Vector2( 28, -167 )
texture = ExtResource( 6 )

[node name="Mouth" type="Sprite" parent="Sprites"]
position = Vector2( 28, -124 )
texture = ExtResource( 5 )

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Move = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.833334, 149.167 )
shape = SubResource( 4 )
